--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
     "web": "expo start --web"
   },
   "dependencies": {
+    "@react-native-async-storage/async-storage": "^2.2.0",
     "babel-preset-expo": "~54.0.0",
     "expo": "~54.0.12",
     "expo-dev-client": "~6.0.13",
