--- a/package.json
+++ b/package.json
@@ -14,11 +14,13 @@
     "babel-preset-expo": "~54.0.0",
     "expo": "~54.0.12",
     "expo-dev-client": "~6.0.13",
+    "expo-linear-gradient": "~15.0.7",
     "expo-status-bar": "~3.0.8",
     "react": "19.1.0",
     "react-native": "0.81.4",
     "react-native-dotenv": "^3.4.11",
-    "react-native-safe-area-context": "^5.6.1"
+    "react-native-safe-area-context": "^5.6.1",
+    "react-native-svg": "15.12.1"
   },
   "private": true
 }
