--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "babel-preset-expo": "~54.0.0",
     "expo": "~54.0.12",
     "expo-dev-client": "~6.0.13",
+    "expo-image-picker": "~17.0.8",
     "expo-linear-gradient": "~15.0.7",
     "expo-status-bar": "~3.0.8",
     "react": "19.1.0",
