--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "@react-native-async-storage/async-storage": "^2.2.0",
     "babel-preset-expo": "~54.0.0",
     "expo": "~54.0.12",
+    "expo-blur": "~15.0.7",
     "expo-dev-client": "~6.0.13",
     "expo-image-picker": "~17.0.8",
     "expo-linear-gradient": "~15.0.7",
